Update main page to add policies, add email obfuscation to stop bots scraping the email address

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="col-md-12">
                
                 <font class="small">
-                    Your privacy matters to us. Read our <a href="privacy-policy.html" class="text-light">Privacy Policy</a> to learn how we handle your personal information.
+                    Your privacy matters to us. Read our <a href="policies/" class="text-light">Privacy Policy</a> to learn how we handle your personal information.
                 </p>
             </div>
         </div>
