--- a/policies/PrivacyPolicy.html
+++ b/policies/PrivacyPolicy.html
@@ -33,7 +33,7 @@
   <ul>
     <li>Engage with us in other related ways, including any sales, marketing, or events</li>
   </ul>
-  <div><strong>Questions or concerns? </strong>Reading this privacy notice will help you understand your privacy rights and choices. If you do not agree with our policies and practices, please do not use our Services. If you still have any questions or concerns, please contact us at privacy@yellowdogman.com.</div>
+  <div><strong>Questions or concerns? </strong>Reading this privacy notice will help you understand your privacy rights and choices. If you do not agree with our policies and practices, please do not use our Services. If you still have any questions or concerns, please contact us at <SCRIPT LANGUAGE="JavaScript">user = 'privacy';site = 'yellowdogman.com';document.write('<a href=\"mailto:' + user + '@' + site + '\">');document.write(user + '@' + site + '</a>');</SCRIPT>.</div>
   <div><br /></div>
   <div><br /></div>
   <div>
@@ -61,7 +61,7 @@
   <div><br /></div>
   <div><strong>What are your rights?</strong> Depending on where you are located geographically, the applicable privacy law may mean you have certain rights regarding your personal information. Learn more about <a href="#privacyrights">your privacy rights</a>.</div>
   <div><br /></div>
-  <div><strong>How do you exercise your rights?</strong> The easiest way to exercise your rights is by emailing privacy@yellowdogman.com, or by contacting us. We will consider and act upon any request in accordance with applicable data protection laws.</div>
+  <div><strong>How do you exercise your rights?</strong> The easiest way to exercise your rights is by emailing <SCRIPT LANGUAGE="JavaScript">user = 'privacy';site = 'yellowdogman.com';document.write('<a href=\"mailto:' + user + '@' + site + '\">');document.write(user + '@' + site + '</a>');</SCRIPT>, or by contacting us. We will consider and act upon any request in accordance with applicable data protection laws.</div>
   <div><br /></div>
   <div>Want to learn more about what we do with any information we collect? <a href="#toc">Review the privacy notice in full</a>.</div>
   <div><br /></div>
@@ -581,7 +581,7 @@
                                             <strong><u>Cookies and similar technologies:</u></strong> Most Web browsers are set to accept cookies by default. If you prefer, you can usually choose to set your browser to remove cookies and to reject cookies. If you choose to remove cookies or reject cookies, this could affect certain features or services of our Services. You may also <a href="http://www.aboutads.info/choices/" rel="noopener noreferrer" target="_blank">opt out of interest-based advertising by advertisers</a> on our Services.
                                           </div>
                                           <div><br /></div>
-                                          <div>If you have questions or comments about your privacy rights, you may email us at privacy@yellowdogman.com.</div>
+                                          <div>If you have questions or comments about your privacy rights, you may email us at <SCRIPT LANGUAGE="JavaScript">user = 'privacy';site = 'yellowdogman.com';document.write('<a href=\"mailto:' + user + '@' + site + '\">');document.write(user + '@' + site + '</a>');</SCRIPT>.</div>
                                           <div><br /></div>
                                           <div id="DNT">
                                             <strong><h2>11. CONTROLS FOR DO-NOT-TRACK FEATURES</h2></strong>
@@ -793,7 +793,7 @@
                                                   <div><br /></div>
                                                   <div>More information about our data collection and sharing practices can be found in this privacy notice.</div>
                                                   <div><br /></div>
-                                                  <div>You may contact us by email at privacy@yellowdogman.com, or by referring to the contact details at the bottom of this document.</div>
+                                                  <div>You may contact us by email at <SCRIPT LANGUAGE="JavaScript">user = 'privacy';site = 'yellowdogman.com';document.write('<a href=\"mailto:' + user + '@' + site + '\">');document.write(user + '@' + site + '</a>');</SCRIPT>, or by referring to the contact details at the bottom of this document.</div>
                                                   <div><br /></div>
                                                   <div>If you are using an authorized agent to exercise your right to opt out we may deny a request if the authorized agent does not submit proof that they have been validly authorized to act on your behalf.</div>
                                                   <div><br /></div>
@@ -927,7 +927,7 @@
                                                               <ul>
                                                                 <li>You may request to opt out from future selling or sharing of your personal information to third parties. Upon receiving an opt-out request, we will act upon the request as soon as feasibly possible, but no later than fifteen (15) days from the date of the request submission.</li>
                                                               </ul>
-                                                              <div>To exercise these rights, you can contact us by email at privacy@yellowdogman.com, or by referring to the contact details at the bottom of this document. If you have a complaint about how we handle your data, we would like to hear from you.</div>
+                                                              <div>To exercise these rights, you can contact us by email at <SCRIPT LANGUAGE="JavaScript">user = 'privacy';site = 'yellowdogman.com';document.write('<a href=\"mailto:' + user + '@' + site + '\">');document.write(user + '@' + site + '</a>');</SCRIPT>, or by referring to the contact details at the bottom of this document. If you have a complaint about how we handle your data, we would like to hear from you.</div>
                                                               <div><br /></div>
                                                               <div>
                                                                 <strong><h2>13. DO VIRGINIA RESIDENTS HAVE SPECIFIC PRIVACY RIGHTS?</h2></strong>
@@ -994,7 +994,7 @@
                                                               <div><br /></div>
                                                               <div>More information about our data collection and sharing practices can be found in this privacy notice.</div>
                                                               <div><br /></div>
-                                                              <div>You may contact us by email at privacy@yellowdogman.com, or by referring to the contact details at the bottom of this document.</div>
+                                                              <div>You may contact us by email at <SCRIPT LANGUAGE="JavaScript">user = 'privacy';site = 'yellowdogman.com';document.write('<a href=\"mailto:' + user + '@' + site + '\">');document.write(user + '@' + site + '</a>');</SCRIPT>, or by referring to the contact details at the bottom of this document.</div>
                                                               <div><br /></div>
                                                               <div>If you are using an authorized agent to exercise your rights, we may deny a request if the authorized agent does not submit proof that they have been validly authorized to act on your behalf.</div>
                                                               <div><br /></div>
@@ -1006,7 +1006,7 @@
                                                               <div><br /></div>
                                                               <div><u>Right to appeal</u></div>
                                                               <div><br /></div>
-                                                              <div>If we decline to take action regarding your request, we will inform you of our decision and reasoning behind it. If you wish to appeal our decision, please email us at privacy@yellowdogman.com. Within sixty (60) days of receipt of an appeal, we will inform you in writing of any action taken or not taken in response to the appeal, including a written explanation of the reasons for the decisions. If your appeal if denied, you may contact the <a href="https://www.oag.state.va.us/consumer-protection/index.php/file-a-complaint" rel="noopener noreferrer" target="_blank">Attorney General to submit a complaint</a>.</div>
+                                                              <div>If we decline to take action regarding your request, we will inform you of our decision and reasoning behind it. If you wish to appeal our decision, please email us at <SCRIPT LANGUAGE="JavaScript">user = 'privacy';site = 'yellowdogman.com';document.write('<a href=\"mailto:' + user + '@' + site + '\">');document.write(user + '@' + site + '</a>');</SCRIPT>. Within sixty (60) days of receipt of an appeal, we will inform you in writing of any action taken or not taken in response to the appeal, including a written explanation of the reasons for the decisions. If your appeal if denied, you may contact the <a href="https://www.oag.state.va.us/consumer-protection/index.php/file-a-complaint" rel="noopener noreferrer" target="_blank">Attorney General to submit a complaint</a>.</div>
                                                               <div></div>
                                                               <div><br /></div>
                                                               <div id="policyupdates">
@@ -1023,7 +1023,7 @@
                                                                 <strong><h2>15. HOW CAN YOU CONTACT US ABOUT THIS NOTICE?</h2></strong>
                                                               </div>
                                                               <div><br /></div>
-                                                              <div>If you have questions or comments about this notice, you may email us at privacy@yellowdogman.com or contact us by post at:</div>
+                                                              <div>If you have questions or comments about this notice, you may email us at <SCRIPT LANGUAGE="JavaScript">user = 'privacy';site = 'yellowdogman.com';document.write('<a href=\"mailto:' + user + '@' + site + '\">');document.write(user + '@' + site + '</a>');</SCRIPT> or contact us by post at:</div>
                                                               <div><br /></div>
                                                               <div>Yellow Dog Man Studios s.r.o.</div>
                                                               <div>Čujkovova 1714/21</div>
@@ -1034,7 +1034,7 @@
                                                                 <strong><h2>16. HOW CAN YOU REVIEW, UPDATE, OR DELETE THE DATA WE COLLECT FROM YOU?</h2></strong>
                                                               </div>
                                                               <div><br /></div>
-                                                              <div>Based on the applicable laws of your country, you may have the right to request access to the personal information we collect from you, change that information, or delete it. To request to review, update, or delete your personal information, please email: privacy@yellowdogman.com.</div>
+                                                              <div>Based on the applicable laws of your country, you may have the right to request access to the personal information we collect from you, change that information, or delete it. To request to review, update, or delete your personal information, please email: <SCRIPT LANGUAGE="JavaScript">user = 'privacy';site = 'yellowdogman.com';document.write('<a href=\"mailto:' + user + '@' + site + '\">');document.write(user + '@' + site + '</a>');</SCRIPT>.</div>
                                                             </div>
                                                           </div>
                                                         </div>
