--- a/policies/index.html
+++ b/policies/index.html
@@ -19,7 +19,9 @@
             <li><a href="EULA.html">EULA</a></li>
             <li>Guidelines: Coming soon!</li>
         </ul>
-        <p>If you have questions about these policies, please contact us by <a href="mailto:privacy@yellowdogman.com">email</a>.</p>
+        <p>If you have questions about these policies, please contact at <SCRIPT LANGUAGE="JavaScript">user = 'privacy';site = 'yellowdogman.com';document.write('<a href=\"mailto:' + user + '@' + site + '\">');document.write(user + '@' + site + '</a>');</SCRIPT>.</p>
+
+        
         <footer>
             <a href="https://resonite.com">Home</a> | <a href="https://resonite.com/policies/index.html">Policies Page</a>
             Copyright © 2023 Yellow Dog Man Studios S.r.o. 
