--- a/policies/TermsOfService.html
+++ b/policies/TermsOfService.html
@@ -3,6 +3,7 @@
     <head>
         <title>Terms of Service</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
+<meta charset="utf-8">
     </head>
     <body>
         <header>
