--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="https://www.patreon.com/resonite">Patreon</a>
                         </li>
+			<li class="nav-item">
+                            <a class="nav-link" href="https://moderation.resonite.com">Moderation</a>
+                        </li>
                         
                             <ul class="navbar-nav">
                               <li class="nav-item dropdown">
@@ -64,6 +67,8 @@
                                 <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
                                   <li><a class="dropdown-item" href="https://bsky.app/profile/resonite.com">Bluesky</a></li>
                                   <li><a class="dropdown-item" href="https://discord.gg/resonite">Discord</a></li>
+                                  <li><a class="dropdown-item" href="https://mastodon.social/@Resonite">Mastodon</a></li>
+                                  <li><a class="dropdown-item" href="https://tiktok.com/@resoniteofficial">TikTok</a></li>
                                   <li><a class="dropdown-item" href="https://twitch.tv/resoniteapp">Twitch</a></li>
                                   <li><a class="dropdown-item" href="https://x.com/resoniteapp">Twitter / X</a></li>
                                   <li><a class="dropdown-item" href="https://www.youtube.com/@resoniteapp">Youtube</a></li>
