feat(guidelines): initial guideline drop from moderation

--- a/policies/EULA.html
+++ b/policies/EULA.html
@@ -467,7 +467,7 @@
     <div class="MsoNormal">17.2  Collateral agreements, changes and amendments are only valid if laid down in writing. The preceding clause can only be waived in writing.</div>
   </div>
   <div class="MsoNormal"><br /></div>
-  <div class="MsoNormal"><div class="MsoNormal">17.3  When using our services, you must also adhere to our <a href="https://resonite.com/policies/index.html">Moderation Guidelines</a> and other policies, these contain more detailed rules about your content and behavior on our platform.</div></div>
+  <div class="MsoNormal"><div class="MsoNormal">17.3  When using our services, you must also adhere to our <a href="https://resonite.com/policies/Guidelines.html">Moderation Guidelines</a> and other policies, these contain more detailed rules about your content and behavior on our platform.</div></div>
 </div>
 
         <footer>
