--- a/policies/TermsOfService.html
+++ b/policies/TermsOfService.html
@@ -524,7 +524,7 @@
     <div class="MsoNormal"><br /></div>
     <div class="MsoNormal" id="addclause"><strong>26. GUIDELINES AND OTHER POLICIES</strong></div>
     <div class="MsoNormal"><br /></div>
-    <div class="MsoNormal">When using our services, you must also adhere to our <a href="https://resonite.com/policies">Moderation Guidelines and other policies</a>, these contain more detailed rules about your content and behavior on our platform.</div>
+    <div class="MsoNormal">When using our services, you must also adhere to our <a href="https://resonite.com/policies/Guidelines.html">Moderation Guidelines and other policies</a>, these contain more detailed rules about your content and behavior on our platform.</div>
     <div class="MsoNormal"></div>
     <div class="MsoNormal"><br /></div>
     <div class="MsoNormal" id="contact">
