--- a/policies/index.html
+++ b/policies/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Resonite Policies Page</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
+        <meta charset="utf-8">
     </head>
     <body>
         <header>
@@ -17,11 +18,12 @@
             <li><a href="PrivacyPolicy.html">Privacy Policy</a></li>
             <li><a href="TermsOfService.html">Terms of Service</a></li>
             <li><a href="EULA.html">EULA</a></li>
-            <li>Guidelines: Coming soon!</li>
+            <li><a href="Guidelines.html">User Guidelines</a></li>
+            <li>Mod & Plugin Policy: Coming Soon!</li>
+            <li>Security Policy: Coming Soon!</li>
         </ul>
         <p>If you have questions about these policies, please contact at <SCRIPT LANGUAGE="JavaScript">user = 'privacy';site = 'yellowdogman.com';document.write('<a href=\"mailto:' + user + '@' + site + '\">');document.write(user + '@' + site + '</a>');</SCRIPT>.</p>
 
-        
         <footer>
             <a href="https://resonite.com">Home</a> | <a href="https://resonite.com/policies/index.html">Policies Page</a>
             Copyright © 2023 Yellow Dog Man Studios S.r.o. 
