--- a/policies/PrivacyPolicy.html
+++ b/policies/PrivacyPolicy.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Privacy Policy</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
-<meta charset="utf-8">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.css">
+        <meta charset="utf-8">
     </head>
     <body>
         <header>
