Add support link

--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
                         </li>
 			<li class="nav-item">
                             <a class="nav-link" href="https://moderation.resonite.com">Moderation</a>
+                        </li>			
+            <li class="nav-item">
+                            <a class="nav-link" href="https://support.resonite.com">Support</a>
                         </li>
                         
                             <ul class="navbar-nav">
