--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Wruczek/Bootstrap-Cookie-Alert@gh-pages/cookiealert.css">
     <meta name="viewport" content="width=device-width, initial-scale=0.7">
     <meta name="title" content="Resonite" />
-    <meta name="description" content="Dive into a brand new digital universe with infinite possibilities, Whether you come here to socialize and hang out with people around the world or to build, create and develop anything from beautiful art, interactive avatars and gadgets, to complex interactive worlds and games, Resonite is an endlessly customizable place where you'll be welcome and where you'll find a group to resonate with." />
+    <meta name="description" content="Dive into a brand new digital universe with infinite possibilities, socialize and hang out with people around the world or to build, create and develop anything" />
     <meta name="keywords" content="VR, SteamVR, Resonite, Yellow Dog Man, Protoflux">
     <meta name="robots" content="index, follow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -18,14 +18,14 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://resonite.com/" />
     <meta property="og:title" content="Resonite" />
-    <meta property="og:description" content="Dive into a brand new digital universe with infinite possibilities, Whether you come here to socialize and hang out with people around the world or to build, create and develop anything from beautiful art, interactive avatars and gadgets, to complex interactive worlds and games, Resonite is an endlessly customizable place where you'll be welcome and where you'll find a group to resonate with." />
+    <meta property="og:description" content="Dive into a brand new digital universe with infinite possibilities, socialize and hang out with people around the world or to build, create and develop anything" />
     <meta property="og:image" content="https://resonite.com/assets/images/logo.jpg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://resonite.com/" />
     <meta property="twitter:title" content="Resonite" />
-    <meta property="twitter:description" content="Dive into a brand new digital universe with infinite possibilities, Whether you come here to socialize and hang out with people around the world or to build, create and develop anything from beautiful art, interactive avatars and gadgets, to complex interactive worlds and games, Resonite is an endlessly customizable place where you'll be welcome and where you'll find a group to resonate with." />
+    <meta property="twitter:description" content="Dive into a brand new digital universe with infinite possibilities, socialize and hang out with people around the world or to build, create and develop anything" />
     <meta property="twitter:image" content="https://resonite.com/assets/images/logo.jpg" />
 </head>
 <body>
@@ -55,10 +55,21 @@
                         <li class="nav-item">
                             <a class="nav-link" href="https://www.patreon.com/resonite">Patreon</a>
                         </li>
-			<li class="nav-item">
-                            <a class="nav-link" href="https://moderation.resonite.com">Moderation</a>
-                        </li>			
-            <li class="nav-item">
+			
+<ul class="navbar-nav">
+                              <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                  Moderation
+                                </a>
+                                <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+                                  <li><a class="dropdown-item" href="https://moderation.resonite.com">Ticket System</a></li>
+                                  <li><a class="dropdown-item" href="https://resonite.com/policies/Guidelines.html">Guidelines</a></li>
+                                </ul>
+                              </li>
+                            </ul>
+
+
+            	<li class="nav-item">
                             <a class="nav-link" href="https://support.resonite.com">Support</a>
                         </li>
                         
@@ -90,9 +101,6 @@
                             <a class="nav-link" href="https://yellowdogman.com/contact.html">Contact</a>
                         </li>
 
-                       <li class="nav-item">
-                            <a class="btn btn-primary" href="https://store.steampowered.com/app/2519830" target="_blank">Download</a>
-                        </li>
                     </ul>
                 </div>
             </div>
@@ -154,6 +162,27 @@
       loop: true
     });
 </script>
+
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org/",
+  "@type": "WebSite",
+  "name": "Resonite",
+  "url": "http://resonite.com"
+}
+</script>
+<script type="application/ld+json" class="schemantra">
+{
+  "@context": "https://schema.org",
+  "@type": "Game",
+  "abstract": "Resonite",
+  "creditText": "Yellow Dog Man Studios",
+  "description": "Dive into a brand new digital universe with infinite possibilities, socialize and hang out with people around the world or to build, create and develop anything",
+  "image": "https://resonite.com/assets/images/resonite.png"
+}
+</script>
+
 
 <script src="https://cdn.jsdelivr.net/gh/Wruczek/Bootstrap-Cookie-Alert@gh-pages/cookiealert.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
