feat(policies): october updates

--- a/policies/Changelog.html
+++ b/policies/Changelog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Resonite Policies Page</title>
+        <title>Resonite Policies Changelog</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.css">
         <meta charset="utf-8">
     </head>
@@ -12,18 +12,15 @@
                 <a href="https://resonite.com">Home</a>
             </nav>
         </header>
-        <h1>Our Policies</h1>
-        <p>In order to run Resonite properly, we need to ensure we have certain policies in place. You will sometimes be asked to agree to these policies as you use Resonite. They are presented here in a list so you have easy access and can refer to them as needed.</p>
-        <ul>
-            <li><a href="PrivacyPolicy.html">Privacy Policy</a></li>
-            <li><a href="TermsOfService.html">Terms of Service</a></li>
-            <li><a href="EULA.html">EULA</a></li>
-            <li><a href="Guidelines.html">User Guidelines</a></li>
-            <li><a href="Security.html">Security Policy</a></li>
-            <li>Mod & Plugin Policy: Coming Soon!</li>
-        </ul>
+        <h1>Policy Changelog</h1>
+        <p>For transparency, a list of changes to our polices are presented here.</p>
 
-        <p>For transparency, we also have a changelog of changes to these items available <a href="Changelog.html">here</a>.</p>
+        <h2>18th October 2023 - Terms of Service</h2>
+        <p>We've updated the language in our Terms of Service in section 2 Intellectual Property rights. We've removed some language relating to the license grants on contents:</p>
+        <ul>
+            <li>We've removed the "Sell" and "Resell" license grant. Resonite does not currently sell or resell your contributions. Future features on our roadmap may require re-adding this but we'll work with you to communicate and overhaul our policies at this time.</li>
+            <li>We've removed wording that referred to "exploit"-ing your contributions. This language that caused some rightful alarm and is not necessary as the other grants cover our use-cases .</li>
+        </ul>
 
         <p>If you have questions about these policies, please contact at <SCRIPT LANGUAGE="JavaScript">user = 'privacy';site = 'yellowdogman.com';document.write('<a href=\"mailto:' + user + '@' + site + '\">');document.write(user + '@' + site + '</a>');</SCRIPT>.</p>
 
