--- a/policies/TermsOfService.html
+++ b/policies/TermsOfService.html
@@ -15,7 +15,7 @@
   <div>
     <div class="MsoNormal"><strong>TERMS OF USE</strong></div>
     <div class="MsoNormal"><br /></div>
-    <div class="MsoNormal"><strong>Last updated</strong> <strong>August 31, 2023</strong></div>
+    <div class="MsoNormal"><strong>Last updated</strong> <strong>October 18th, 2023</strong></div>
     <div class="MsoNormal"><br /></div>
     <div class="MsoNormal"><br /></div>
     <div class="MsoNormal"><br /></div>
@@ -144,7 +144,7 @@
     <div class="MsoNormal"><br /></div>
     <div class="MsoNormal">You understand that Contributions may be viewable by other users of the Services and possibly through third-party websites.</div>
     <div class="MsoNormal"><br /></div>
-    <div class="MsoNormal"><strong>When you post Contributions, you grant us a license (including use of your name, trademarks, and logos): </strong>By posting any Contributions, you grant us an unrestricted, unlimited, irrevocable, perpetual, non-exclusive, transferable, royalty-free, fully-paid, worldwide right, and license to: use, copy, reproduce, distribute, sell, resell, publish, broadcast, retitle, store, publicly perform, publicly display, reformat, translate, excerpt (in whole or in part), and exploit your Contributions (including, without limitation, your image, name, and voice) for any purpose, commercial, advertising, or otherwise, to prepare derivative works of, or incorporate into other works, your Contributions, and to sublicense the licenses granted in this section. Our use and distribution may occur in any media formats and through any media channels.</div>
+    <div class="MsoNormal"><strong>When you post Contributions, you grant us a license (including use of your name, trademarks, and logos): </strong>By posting any Contributions, you grant us an unrestricted, unlimited, irrevocable, perpetual, non-exclusive, transferable, royalty-free, fully-paid, worldwide right, and license to: use, copy, reproduce, distribute, publish, broadcast, retitle, store, publicly perform, publicly display, reformat, translate, and excerpt (in whole or in part) your Contributions for any purpose (including, without limitation, your image, name, and voice), commercial, advertising, or otherwise, to prepare derivative works of, or incorporate into other works, your Contributions, and to sublicense the licenses granted in this section. Our use and distribution may occur in any media formats and through any media channels.</div>
     <div class="MsoNormal"><br /></div>
     <div class="MsoNormal">This license includes our use of your name, company name, and franchise name, as applicable, and any of the trademarks, service marks, trade names, logos, and personal and commercial images you provide.</div>
     <div class="MsoNormal"><br /></div>
@@ -281,7 +281,7 @@
         </div>
       </div>
       <div class="MsoNormal"><br /></div>
-      <div class="MsoNormal"><div class="MsoNormal">By posting your Contributions to any part of the Services, you automatically grant, and you represent and warrant that you have the right to grant, to us an unrestricted, unlimited, irrevocable, perpetual, non-exclusive, transferable, royalty-free, fully-paid, worldwide right, and license to host, use, copy, reproduce, disclose, sell, resell, publish, broadcast, retitle, archive, store, cache, publicly perform, publicly display, reformat, translate, transmit, excerpt (in whole or in part), and distribute such Contributions (including, without limitation, your image and voice) for any purpose, commercial, advertising, or otherwise, and to prepare derivative works of, or incorporate into other works, such Contributions, and grant and authorize sublicenses of the foregoing. The use and distribution may occur in any media formats and through any media channels.</div></div>
+      <div class="MsoNormal"><div class="MsoNormal">By posting your Contributions to any part of the Services, you automatically grant, and you represent and warrant that you have the right to grant, to us an unrestricted, unlimited, irrevocable, perpetual, non-exclusive, transferable, royalty-free, fully-paid, worldwide right, and license to host, use, copy, reproduce, disclose, publish, broadcast, retitle, archive, store, cache, publicly perform, publicly display, reformat, translate, transmit, excerpt (in whole or in part), and distribute such Contributions (including, without limitation, your image and voice) for any purpose, commercial, advertising, or otherwise, and to prepare derivative works of, or incorporate into other works, such Contributions, and grant and authorize sublicenses of the foregoing. The use and distribution may occur in any media formats and through any media channels.</div></div>
       <div class="MsoNormal"><br /></div>
       <div class="MsoNormal"><div class="MsoNormal">This license will apply to any form, media, or technology now known or hereafter developed, and includes our use of your name, company name, and franchise name, as applicable, and any of the trademarks, service marks, trade names, logos, and personal and commercial images you provide. You waive all moral rights in your Contributions, and you warrant that moral rights have not otherwise been asserted in your Contributions.</div></div>
       <div class="MsoNormal"><br /></div>
