--- a/policies/Changelog.html
+++ b/policies/Changelog.html
@@ -19,7 +19,8 @@
         <p>We've updated the language in our Terms of Service in section 2 Intellectual Property rights. We've removed some language relating to the license grants on contents:</p>
         <ul>
             <li>We've removed the "Sell" and "Resell" license grant. Resonite does not currently sell or resell your contributions. Future features on our roadmap may require re-adding this but we'll work with you to communicate and overhaul our policies at this time.</li>
-            <li>We've removed wording that referred to "exploit"-ing your contributions. This language that caused some rightful alarm and is not necessary as the other grants cover our use-cases .</li>
+            <li>We've removed wording that referred to "exploit"-ing your contributions. This language that caused some rightful alarm and is not necessary as the other grants cover our use-cases.</li>
+            <li>We've removed clauses relating to users being able to access Resonite if they are under 16 with parental supervision. We have no way to store or verify this information at this time so cannot support it.</li>
         </ul>
 
         <p>If you have questions about these policies, please contact at <SCRIPT LANGUAGE="JavaScript">user = 'privacy';site = 'yellowdogman.com';document.write('<a href=\"mailto:' + user + '@' + site + '\">');document.write(user + '@' + site + '</a>');</SCRIPT>.</p>
