--- a/policies/TermsOfService.html
+++ b/policies/TermsOfService.html
@@ -176,7 +176,7 @@
     </div>
   </div>
   <div><br /></div>
-  <div><div class="MsoNormal">By using the Services, you represent and warrant that: (1) all registration information you submit will be true, accurate, current, and complete; (2) you will maintain the accuracy of such information and promptly update such registration information as necessary; (3) you have the legal capacity and you agree to comply with these Legal Terms; (4) you are not under the age of 16, or if a minor, you have received parental permission to use the Services; (5) you are not a minor in the jurisdiction in which you reside; (6) you will not use the Services for any illegal or unauthorized purpose; and (7) your use of the Services will not violate any applicable law or regulation.</div></div>
+  <div><div class="MsoNormal">By using the Services, you represent and warrant that: (1) all registration information you submit will be true, accurate, current, and complete; (2) you will maintain the accuracy of such information and promptly update such registration information as necessary; (3) you have the legal capacity and you agree to comply with these Legal Terms; (4) you are not under the age of 16; (5) you are not a minor in the jurisdiction in which you reside, or if a minor, you have received parental permission to use the Services; (6) you will not use the Services for any illegal or unauthorized purpose; and (7) your use of the Services will not violate any applicable law or regulation.</div></div>
   <div><br /></div>
   <div>
     <div class="MsoNormal">
