--- a/policies/Security.html
+++ b/policies/Security.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>User Guidelines</title>
+        <title>Security</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.css">
         <meta charset="utf-8">
     </head>
