feat(favicon): Added Favicons and other files to assist with it

--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
     <meta property="twitter:title" content="Resonite" />
     <meta property="twitter:description" content="Dive into a brand new digital universe with infinite possibilities, socialize and hang out with people around the world or to build, create and develop anything" />
     <meta property="twitter:image" content="https://resonite.com/assets/images/logo.jpg" />
+
+    <!-- Favicon Stuff -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/assets/favicon/site.webmanifest">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
 
