--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Resonite</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Wruczek/Bootstrap-Cookie-Alert@gh-pages/cookiealert.css">
     <meta name="viewport" content="width=device-width, initial-scale=0.7">
@@ -117,7 +117,7 @@
 
     <div class="video-background">
         <video autoplay muted loop>
-            <source src="assets/movie480_vp9.webm" type="video/webm">
+            <source src="/assets/video/movie480_vp9.webm" type="video/webm">
             Your browser does not support the video tag.
         </video>
     </div>
