--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=0.7">
     <meta name="title" content="Resonite" />
     <meta name="description" content="Dive into a brand new digital universe with infinite possibilities, socialize and hang out with people around the world or to build, create and develop anything" />
-    <meta name="keywords" content="VR, SteamVR, Resonite, Yellow Dog Man, Protoflux">
+    <meta name="keywords" content="VR, SteamVR, Resonite, Yellow Dog Man, Protoflux, Social">
     <meta name="robots" content="index, follow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="English">
