--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         I agree
     </button>
 </div>
-
+<div class="home-page">
     <div class="wrapper">
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
             <div class="container">
@@ -62,6 +62,12 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="https://www.patreon.com/resonite">Patreon</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="Features.html">Features</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="CaseStudies.html">Case Studies</a>
                         </li>
 			
 <ul class="navbar-nav">
@@ -113,7 +119,8 @@
                 </div>
             </div>
         </nav>
-    </div>    
+    </div>
+</div>     
 
     <div class="video-background">
         <video autoplay muted loop>
