--- a/index.html
+++ b/index.html
@@ -64,12 +64,11 @@
                             <a class="nav-link" href="https://www.patreon.com/resonite">Patreon</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="Features.html">Features</a>
+                            <a class="nav-link" href="features.html">Features</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="CaseStudies.html">Case Studies</a>
+                            <a class="nav-link" href="case-studies.html">Case Studies</a>
                         </li>
-			
 <ul class="navbar-nav">
                               <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
