Baby Chroma's First Website Update
My first attempt at pushing this myself.

--- a/submit-an-event.html
+++ b/submit-an-event.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Wed Dec 06 2023 01:16:34 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Dec 12 2023 00:31:06 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6567b01217f49566a6f11676" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -71,7 +71,7 @@
                   </div>
                   <nav class="nav-dropdown-list shadow-three mobile-shadow-hide w-dropdown-list">
                     <a href="https://support.resonite.com/open.php" target="_blank" class="nav-dropdown-link w-dropdown-link">Submit Support Ticket</a>
-                    <a href="https://resonite.com/policies/Guidelines.html" class="nav-dropdown-link w-dropdown-link">User Guidelines</a>
+                    <a href="#" class="nav-dropdown-link w-dropdown-link">Moderation Guidelines</a>
                     <a href="https://moderation.resonite.com/open.php" target="_blank" class="nav-dropdown-link w-dropdown-link">Submit Moderation Ticket</a>
                   </nav>
                 </div>
