--- a/features.html
+++ b/features.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Wed Dec 06 2023 01:16:34 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Dec 12 2023 00:31:06 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6565266954e064f8c40d89ac" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -24,7 +24,7 @@
     <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar-logo-left-container shadow-three w-nav">
       <div class="container">
         <div class="navbar-wrapper">
-          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 63vw, (max-width: 767px) 159px, (max-width: 991px) 21vw, 16vw" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w"></a>
+          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 66vw, (max-width: 767px) 158.99305725097656px, (max-width: 991px) 21vw, 16vw" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w"></a>
           <nav role="navigation" class="nav-menu-wrapper w-nav-menu">
             <ul role="list" class="nav-menu-two w-list-unstyled">
               <li>
@@ -56,11 +56,12 @@
                     <div class="text-block-2">Socials</div>
                   </div>
                   <nav class="nav-dropdown-list shadow-three mobile-shadow-hide w-dropdown-list">
+                    <a href="https://discord.gg/Jm4nsEGq" class="nav-dropdown-link w-dropdown-link">Discord</a>
                     <a href="https://www.twitch.tv/resoniteapp" target="_blank" class="nav-dropdown-link w-dropdown-link">Twitch</a>
                     <a href="https://twitter.com/ResoniteApp?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank" class="nav-dropdown-link w-dropdown-link">Twitter</a>
                     <a href="https://www.youtube.com/@resoniteapp" target="_blank" class="nav-dropdown-link w-dropdown-link">YouTube</a>
                     <a href="https://www.tiktok.com/@resoniteofficial" target="_blank" class="nav-dropdown-link w-dropdown-link">TikTok</a>
-                    <a href="https://mastodon.social/@Resonite" target="_blank" class="nav-dropdown-link w-dropdown-link">Mastadon</a>
+                    <a href="https://mastodon.social/@Resonite" target="_blank" class="nav-dropdown-link w-dropdown-link">Mastodon</a>
                     <a href="https://bsky.app/profile/resonite.com" target="_blank" class="nav-dropdown-link w-dropdown-link">Bluesky</a>
                   </nav>
                 </div>
@@ -73,7 +74,7 @@
                   </div>
                   <nav class="nav-dropdown-list shadow-three mobile-shadow-hide w-dropdown-list">
                     <a href="https://support.resonite.com/open.php" target="_blank" class="nav-dropdown-link w-dropdown-link">Submit Support Ticket</a>
-                    <a href="https://resonite.com/policies/Guidelines.html" class="nav-dropdown-link w-dropdown-link">User Guidelines</a>
+                    <a href="https://resonite.com/policies/Guidelines.html" class="nav-dropdown-link w-dropdown-link">Moderation Guidelines</a>
                     <a href="https://moderation.resonite.com/open.php" target="_blank" class="nav-dropdown-link w-dropdown-link">Submit Moderation Ticket</a>
                     <a href="https://github.com/Yellow-Dog-Man/Resonite-Issues" target="_blank" class="nav-dropdown-link w-dropdown-link">Github</a>
                   </nav>
@@ -92,7 +93,15 @@
       </div>
     </div>
   </div>
-  <div class="div-block"></div>
+  <div class="div-block">
+    <div class="w-layout-hflex flex-block-13">
+      <div class="w-layout-vflex flex-block-14">
+        <div class="w-layout-hflex">
+          <a href="#" class="link">Avatar created by &quot;WendigoWren&quot;</a>
+        </div>
+      </div>
+    </div>
+  </div>
   <section class="hero-heading-left">
     <div class="container-2">
       <div class="hero-wrapper">
@@ -100,15 +109,25 @@
           <h2 class="heading-3">Collaborative Creation Tools</h2>
           <p class="margin-bottom-24px">Resonite provides users an array of development tools that can be used alongside others in your session! Create custom avatars, interactive props, worlds, experiences, and much more! (While possible, we typically advise against deleting all of existence.)</p>
         </div>
-        <div class="hero-split"><img src="images/Features_CollaborativeCreationTools_01.jpg" loading="lazy" sizes="(max-width: 767px) 94vw, (max-width: 991px) 92vw, 43vw" srcset="images/Features_CollaborativeCreationTools_01-p-500.jpg 500w, images/Features_CollaborativeCreationTools_01-p-800.jpg 800w, images/Features_CollaborativeCreationTools_01-p-1080.jpg 1080w, images/Features_CollaborativeCreationTools_01-p-1600.jpg 1600w, images/Features_CollaborativeCreationTools_01-p-2000.jpg 2000w, images/Features_CollaborativeCreationTools_01.jpg 2560w" alt="" class="shadow-two"></div>
+        <div class="hero-split"><img src="images/Features_CollaborativeCreationTools_01.jpg" loading="lazy" sizes="(max-width: 479px) 94vw, (max-width: 767px) 95vw, (max-width: 991px) 92vw, 43vw" srcset="images/Features_CollaborativeCreationTools_01-p-500.jpg 500w, images/Features_CollaborativeCreationTools_01-p-800.jpg 800w, images/Features_CollaborativeCreationTools_01-p-1080.jpg 1080w, images/Features_CollaborativeCreationTools_01-p-1600.jpg 1600w, images/Features_CollaborativeCreationTools_01-p-2000.jpg 2000w, images/Features_CollaborativeCreationTools_01.jpg 2560w" alt="" class="shadow-two"></div>
       </div>
     </div>
   </section>
-  <div class="div-block-2"></div>
+  <div class="div-block-intavt-1-copy">
+    <div class="w-layout-hflex flex-block-13">
+      <div class="w-layout-vflex flex-block-14">
+        <div class="w-layout-hflex">
+          <a href="#" class="link-copy">(Left) Avatar created by &quot;WendigoWren&quot;</a>
+          <a href="https://twitter.com/Aegis_The_Wolf" class="link-copy">Pen Tool created by &quot;Aegis_Wolf&quot;</a>
+          <a href="http://resrec:///U-Rustybot/R-96ee4ccb-a3af-40c4-88d8-be6daebf58fe" class="link-copy">(Right) Avatar created by &quot;Rustybot&quot;</a>
+        </div>
+      </div>
+    </div>
+  </div>
   <section class="hero-heading-right-2">
     <div class="container-2">
       <div class="hero-wrapper-2">
-        <div class="hero-split"><img src="images/Features_ContentSharing_01.jpg" loading="lazy" sizes="(max-width: 767px) 94vw, (max-width: 991px) 92vw, 43vw" srcset="images/Features_ContentSharing_01-p-500.jpg 500w, images/Features_ContentSharing_01-p-800.jpg 800w, images/Features_ContentSharing_01-p-1080.jpg 1080w, images/Features_ContentSharing_01-p-1600.jpg 1600w, images/Features_ContentSharing_01.jpg 1920w" alt="" class="shadow-two-2"></div>
+        <div class="hero-split"><img src="images/Features_ContentSharing_01.jpg" loading="lazy" sizes="(max-width: 479px) 94vw, (max-width: 767px) 95vw, (max-width: 991px) 92vw, 43vw" srcset="images/Features_ContentSharing_01-p-500.jpg 500w, images/Features_ContentSharing_01-p-800.jpg 800w, images/Features_ContentSharing_01-p-1080.jpg 1080w, images/Features_ContentSharing_01-p-1600.jpg 1600w, images/Features_ContentSharing_01.jpg 1920w" alt="" class="shadow-two-2"></div>
         <div class="hero-split">
           <h2 class="heading-4">Content Sharing</h2>
           <p class="margin-bottom-24px-copy">Browse your own and others content! Save others (with proper permissions) and your own creations. Upload files directly from your local files into a session, view and modify it with others!</p>
@@ -116,7 +135,15 @@
       </div>
     </div>
   </section>
-  <div class="div-block-3"></div>
+  <div class="div-block-3">
+    <div class="w-layout-hflex flex-block-13">
+      <div class="w-layout-vflex flex-block-14">
+        <div class="w-layout-hflex">
+          <a href="https://twitter.com/GearBell" target="_blank" class="link">Avatars created by &quot;Gearbell&quot;</a>
+        </div>
+      </div>
+    </div>
+  </div>
   <section class="hero-heading-left">
     <div class="container-2">
       <div class="hero-wrapper">
@@ -124,7 +151,7 @@
           <h2 class="heading-5">Interactive Custom Avatars</h2>
           <p class="margin-bottom-24px">Resonite allows you to share, build, and collect interactive custom avatars! (Legs included.)</p>
         </div>
-        <div class="hero-split"><img src="images/Features_CollaborativeCreationTools_01.jpg" loading="lazy" sizes="(max-width: 767px) 94vw, (max-width: 991px) 92vw, 43vw" srcset="images/Features_CollaborativeCreationTools_01-p-500.jpg 500w, images/Features_CollaborativeCreationTools_01-p-800.jpg 800w, images/Features_CollaborativeCreationTools_01-p-1080.jpg 1080w, images/Features_CollaborativeCreationTools_01-p-1600.jpg 1600w, images/Features_CollaborativeCreationTools_01-p-2000.jpg 2000w, images/Features_CollaborativeCreationTools_01.jpg 2560w" alt="" class="shadow-two"></div>
+        <div class="hero-split"><img src="images/Features_CollaborativeCreationTools_01.jpg" loading="lazy" sizes="(max-width: 479px) 94vw, (max-width: 767px) 95vw, (max-width: 991px) 92vw, 43vw" srcset="images/Features_CollaborativeCreationTools_01-p-500.jpg 500w, images/Features_CollaborativeCreationTools_01-p-800.jpg 800w, images/Features_CollaborativeCreationTools_01-p-1080.jpg 1080w, images/Features_CollaborativeCreationTools_01-p-1600.jpg 1600w, images/Features_CollaborativeCreationTools_01-p-2000.jpg 2000w, images/Features_CollaborativeCreationTools_01.jpg 2560w" alt="" class="shadow-two"></div>
       </div>
     </div>
   </section>
@@ -139,6 +166,29 @@
       <div class="image-wrapper"></div>
     </div>
   </div>
+  <section class="footer-dark-3">
+    <div class="container-9">
+      <div class="footer-wrapper-2">
+        <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 84vw, 158.99305725097656px" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w"></a>
+        <div class="footer-content-2">
+          <div id="w-node-c8916215-f428-4614-ff29-bbb3582a90f2-c40d89ac" class="footer-block-2">
+            <div class="title-small-2">Company</div>
+            <a href="https://www.patreon.com/Resonite" class="footer-link-2">Support Us</a>
+            <a href="https://resonite.com/policies/" target="_blank" class="footer-link-2">Policies</a>
+            <a href="https://yellowdogman.com/contact.html" class="footer-link-2">Contact</a>
+          </div>
+          <div id="w-node-c8916215-f428-4614-ff29-bbb3582a90fb-c40d89ac" class="footer-block-2">
+            <div class="title-small-2">Resources</div>
+            <a href="https://support.resonite.com/open.php" class="footer-link-2">Get Technical Support</a>
+            <a href="https://moderation.resonite.com/open.php" target="_blank" class="footer-link-2">Submit Moderation Ticket</a>
+            <a href="https://github.com/Yellow-Dog-Man/Resonite-Issues" class="footer-link-2">Github</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer-divider-2"></div>
+    <div class="footer-copyright-center-2">Copyright © 2023 Yellow Dog Man Studios s.r.o.</div>
+  </section>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=656504e52e383d09efa776a6" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
 </body>
