Navbar Tweak and Custom 404 Page
Tweaked the navbar behavior to follow the top of the page while scrolling, added a custom meme 404 page, aesthetic polish on the home page.

--- a/features.html
+++ b/features.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Tue Dec 12 2023 00:31:06 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Dec 13 2023 02:31:52 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6565266954e064f8c40d89ac" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -24,7 +24,7 @@
     <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar-logo-left-container shadow-three w-nav">
       <div class="container">
         <div class="navbar-wrapper">
-          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 66vw, (max-width: 767px) 158.99305725097656px, (max-width: 991px) 21vw, 16vw" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w"></a>
+          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 63vw, (max-width: 767px) 158.99305725097656px, (max-width: 991px) 21vw, 16vw" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w"></a>
           <nav role="navigation" class="nav-menu-wrapper w-nav-menu">
             <ul role="list" class="nav-menu-two w-list-unstyled">
               <li>
@@ -97,7 +97,7 @@
     <div class="w-layout-hflex flex-block-13">
       <div class="w-layout-vflex flex-block-14">
         <div class="w-layout-hflex">
-          <a href="#" class="link">Avatar created by &quot;WendigoWren&quot;</a>
+          <a href="https://www.theneolanders.com/" target="_blank" class="link">Avatar created by &quot;WendigoWren&quot;</a>
         </div>
       </div>
     </div>
@@ -117,9 +117,9 @@
     <div class="w-layout-hflex flex-block-13">
       <div class="w-layout-vflex flex-block-14">
         <div class="w-layout-hflex">
-          <a href="#" class="link-copy">(Left) Avatar created by &quot;WendigoWren&quot;</a>
+          <a href="https://www.theneolanders.com/" target="_blank" class="link-copy">(Left) Avatar created by &quot;WendigoWren&quot;</a>
           <a href="https://twitter.com/Aegis_The_Wolf" class="link-copy">Pen Tool created by &quot;Aegis_Wolf&quot;</a>
-          <a href="http://resrec:///U-Rustybot/R-96ee4ccb-a3af-40c4-88d8-be6daebf58fe" class="link-copy">(Right) Avatar created by &quot;Rustybot&quot;</a>
+          <a href="https://www.theneolanders.com/" target="_blank" class="link-copy">(Right) Avatar created by &quot;Rustybot&quot;</a>
         </div>
       </div>
     </div>
