--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Tue Dec 12 2023 00:31:06 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Dec 13 2023 02:31:52 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="656504e52e383d09efa77703" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -22,7 +22,7 @@
     <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar-logo-left-container shadow-three w-nav">
       <div class="container">
         <div class="navbar-wrapper">
-          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 66vw, (max-width: 767px) 158.99305725097656px, (max-width: 991px) 21vw, 16vw" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w"></a>
+          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 63vw, (max-width: 767px) 158.99305725097656px, (max-width: 991px) 21vw, 16vw" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w"></a>
           <nav role="navigation" class="nav-menu-wrapper w-nav-menu">
             <ul role="list" class="nav-menu-two w-list-unstyled">
               <li>
@@ -92,15 +92,15 @@
     </div>
   </div>
   <div class="w-layout-hflex flex-block-8">
+    <div data-poster-url="videos/RSN_MiniTrailer_01_v01_1_1-poster-00001.jpg" data-video-urls="videos/RSN_MiniTrailer_01_v01_1_1-transcode.mp4,videos/RSN_MiniTrailer_01_v01_1_1-transcode.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="background-video w-background-video w-background-video-atom"><video id="f919723b-70bf-cb78-6c97-5f56bc88040a-video" autoplay="" loop="" style="background-image:url(&quot;videos/RSN_MiniTrailer_01_v01_1_1-poster-00001.jpg&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
+        <source src="videos/RSN_MiniTrailer_01_v01_1_1-transcode.mp4" data-wf-ignore="true">
+        <source src="videos/RSN_MiniTrailer_01_v01_1_1-transcode.webm" data-wf-ignore="true">
+      </video></div>
     <div class="div-block-10">
       <div class="text-block-17">Welcome to Resonite</div>
       <div class="text-block-20">Create, learn, and explore together. All in one seamless experience.</div>
     </div>
   </div>
-  <div data-poster-url="videos/RSN_MiniTrailer_01_v01_1_1-poster-00001.jpg" data-video-urls="videos/RSN_MiniTrailer_01_v01_1_1-transcode.mp4,videos/RSN_MiniTrailer_01_v01_1_1-transcode.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="background-video w-background-video w-background-video-atom"><video id="f919723b-70bf-cb78-6c97-5f56bc88040a-video" autoplay="" loop="" style="background-image:url(&quot;videos/RSN_MiniTrailer_01_v01_1_1-poster-00001.jpg&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
-      <source src="videos/RSN_MiniTrailer_01_v01_1_1-transcode.mp4" data-wf-ignore="true">
-      <source src="videos/RSN_MiniTrailer_01_v01_1_1-transcode.webm" data-wf-ignore="true">
-    </video></div>
   <section class="testimonial-column-dark">
     <div class="container-7">
       <h2 class="centered-heading">An all in one platform,<br>creative tool, and social experience.</h2>
@@ -136,7 +136,7 @@
       <div class="pricing-grid">
         <div id="w-node-_94b3c992-6e84-9ddb-59fb-4a4d840429d2-efa77703" class="pricing-card-three"><img src="images/Color_128_Supporter_Yellow.png" loading="lazy" alt="" class="pricing-image">
           <h3 class="heading-12">$5/Month: Explorer</h3>
-          <p class="pricing-card-text">- 25 GB of storage space (avatars, items, assets, worlds...)<br>‍<br>- Basic shout-out (videos, streams, posts)<br>‍<br>- Discord access<br><br><br><br><br><br><br><br><br><br><br><br><br> </p>
+          <p class="pricing-card-text">- 25 GB of storage space (avatars, items, assets, worlds...)<br>‍<br>- Basic shout-out (videos, streams, posts)<br>‍<br>- Discord access<br><br><br><br><br><br><br><br><br><br><br><br> </p>
           <a href="https://www.patreon.com/resonite" target="_blank" class="text-link-arrow w-inline-block">
             <div class="text-block-22">Learn more</div>
             <div class="arrow-embed-2 w-embed"><svg width="20" height="20" viewbox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
