--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Tue Dec 12 2023 00:31:06 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Dec 13 2023 02:31:52 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65669391bf5131530c57df66" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -19,11 +19,11 @@
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
-<body>
+<body class="body-8">
   <div class="utility-page-wrap">
-    <div class="utility-page-content"><img src="https://d3e54v103j8qbb.cloudfront.net/static/page-not-found.211a85e40c.svg" alt="">
-      <h2>Page Not Found</h2>
-      <div>The page you are looking for doesn&#x27;t exist or has been moved</div>
+    <div class="utility-page-content"><img src="images/Orange.png" alt="">
+      <h2>404</h2>
+      <div>Orange</div>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=656504e52e383d09efa776a6" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
